[project]
name = "xinranliiii-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "xinranliiii",email = "xinran24@bu.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "xinranliiii"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
